Closed
Bug 230687
Opened 22 years ago
Closed 22 years ago
Build failure in mozilla code while building libgkgfx.so.
Categories
(Core Graveyard :: GFX, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: shanmus, Assigned: roc)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
804 bytes,
patch
|
dbaron
:
review+
dbaron
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; OSF1 alpha; en-US; rv:1.6b) Gecko/20031211
Build Identifier: Mozilla/5.0 (X11; U; OSF1 alpha; en-US; rv:1.6b) Gecko/20031211
Starting Jan.10th the mozilla code fails to build
with the following errors while building nsRegion.cpp.
cxx: Error: ../../dist/include/gfx/nsRegion.h, line 73: class
"nsRegion::nsRectFast" has no member "operator="
nsRectFast::operator = (aRect); // Copy only the nsRectFast part
------------------^
cxx: Info: 1 error detected in the compilation of "nsRegion.cpp".
Reproducible: Always
Steps to Reproduce:
1.
2.
3.
Actual Results:
Build failed
Expected Results:
Should have built successfully.
Comment 1•22 years ago
|
||
regression from bug 228378. Did you later test compiling as it seems bug 228378
comment 16 seems to mention a fix for IRIX, AIX, HP-UX, which may have also
fixed OSF/1. There's also patch for bug 230118 that was later backed out.
Keywords: regression
| Assignee | ||
Comment 2•22 years ago
|
||
Shanmugavelu, can you try changing "nsRectFast::operator = (aRect);" to
"nsRect::operator = (aRect);" and see if that compiles?
I tried to compile with the change
nsRect::operator = (aRect);
But still it fails to compile with the same errors.
cxx: Error: ../../dist/include/gfx/nsRegion.h, line 73: class "nsRect" has no
member "operator="
nsRect::operator = (aRect); // Copy only the nsRectFast part
--------------^
cxx: Info: 1 error detected in the compilation of "nsRegion.cpp".
This happens with the latest code.
| Assignee | ||
Comment 4•22 years ago
|
||
This must be a compiler bug. nsRect and nsRectFast should have an implicit
operator=. You could try defining the obvious operator= in nsRect.h
Comment 5•22 years ago
|
||
*** Bug 231041 has been marked as a duplicate of this bug. ***
Comment 6•22 years ago
|
||
"You could try defining the obvious operator= in nsRect."
nice. did somebody do try this?
success? patch??
thanks
| Assignee | ||
Comment 7•22 years ago
|
||
Try this
Comment 8•22 years ago
|
||
hello,
patch works!
THANKS!!!
| Assignee | ||
Updated•22 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Updated•22 years ago
|
Assignee: general → roc
| Assignee | ||
Updated•22 years ago
|
Attachment #139275 -
Flags: superreview?(dbaron)
Attachment #139275 -
Flags: review?(dbaron)
Attachment #139275 -
Flags: superreview?(dbaron)
Attachment #139275 -
Flags: superreview+
Attachment #139275 -
Flags: review?(dbaron)
Attachment #139275 -
Flags: review+
| Assignee | ||
Comment 9•22 years ago
|
||
Fix checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•17 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•