Bug 230687. DEC compiler barfs on call to implicit nsRectFast::operator=. r+sr=dbaron